# project-micric

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: catch.hpp
src/: CMakeLists.txt  coolnumber.cpp  coolnumber.h  main.cpp  test.txt
src/core/: EnumToString.cpp  Scanner.cpp  Source1.cpp  Token.cpp  coolnumber.cpp
src/include/: EnumToString.h  Scanner.h  Source1.h  Token.h
src/lib/: CommonUtils.cpp  CommonUtils.h  placeholder
test/: CMakeLists.txt  basetest.cpp  lexemtypetests.cpp  scannertests.cpp  test2.cpp  tokentests.cpp
test/lib/: TestUtils.cpp  TestUtils.h
